--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,40 @@ ompiled source #
 ehthumbs.db
 Icon?
 Thumbs.db
+
+#LATEX
+
+
+#LATEX
+cn
+*.acr
+*.alg
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.fdb_latexmk
+*.glg
+*.glo
+*.gls
+*.idx
+*.ilg
+*.ind
+*.ist
+*.lof
+*.log
+*.lot
+*.maf
+*.mtc
+*.mtc0
+*.nav
+*.nlo
+*.out
+*.pdfsync
+*.ps
+*.snm
+*.synctex.gz
+*.toc
+*.vrb
+*.xdy
+
